--- a/app/src/main/res/layout/item_dynamic_list.xml
+++ b/app/src/main/res/layout/item_dynamic_list.xml
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
                 android:textColor="@android:color/secondary_text_dark"
-                android:text="作者：高原黑娃"/>
+                android:text="傍晚的大唐芙蓉园"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +55,7 @@
                 android:textSize="14sp"
                 android:layout_alignParentRight="true"
                 android:textColor="@android:color/secondary_text_dark"
-                android:text="地点：西安钟楼"/>
+                android:text="作者：高原黑娃"/>
         </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
