添加了一个录音功能

--- a/app/src/main/res/layout/activity_addphoto.xml
+++ b/app/src/main/res/layout/activity_addphoto.xml
@@ -214,6 +214,35 @@
         android:layout_height="1px"
         android:background="@color/app_splite_line"/>
     <LinearLayout
+        android:id="@+id/addphoto_secret"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:gravity="center_vertical"
+        android:background="@android:color/white"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginLeft="15dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="藏悄悄话"/>
+        <Space
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="50dip"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/ic_keyboard_arrow_right_24px"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/app_splite_line"/>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
