--- a/app/src/main/res/layout/activity_add_secret.xml
+++ b/app/src/main/res/layout/activity_add_secret.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/app_background"
     android:padding="16dip"
@@ -46,6 +47,8 @@
         android:layout_width="100dip"
         android:layout_height="100dip"
         android:layout_centerInParent="true"
+        android:background="@drawable/circle_secondary_bg"
+        android:src="@mipmap/record_onclick"
         android:scaleType="centerInside" />
     <Button
         android:id="@+id/secret_save_button"
