--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:gravity="center"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:background="@color/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dip"
-        app:cardBackgroundColor="@color/cardview_dark_background"
-        app:cardCornerRadius="2dp">
-        <com.amap.api.maps.MapView
-            android:id="@+id/main_map"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+        android:layout_height="60dip"
+        android:layout_alignParentBottom="true"
+        card:cardBackgroundColor="@color/cardview_dark_background"
+        card:cardCornerRadius="0dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:gravity="center_vertical"
+        android:layout_height="60dip">
+
+    </LinearLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+    <com.stone.card.library.CardSlidePanel
+        android:id="@+id/image_slide_panel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        card:bottomMarginTop="38dp"
+        card:itemMarginTop="10dp"
+        card:yOffsetStep="13dp" />
+</RelativeLayout>
