--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="60dip"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         card:cardBackgroundColor="@color/cardview_dark_background"
         card:cardCornerRadius="0dp">
@@ -16,8 +16,27 @@
         android:background="@android:color/white"
         android:orientation="vertical"
         android:gravity="center_vertical"
-        android:layout_height="60dip">
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginTop="8dip"
+            android:layout_marginBottom="8dip"
+            android:textColor="@android:color/secondary_text_light"
+            android:text="如果你的照片不够好,那是因为你靠得不够近。"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dip"
+            android:textSize="14sp"
+            android:textColor="@android:color/secondary_text_light"
+            android:layout_gravity="right|bottom"
+            android:text="-- 罗伯特·卡帕"/>
     </LinearLayout>
     </android.support.v7.widget.CardView>
     <com.stone.card.library.CardSlidePanel
