--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -12,6 +12,7 @@
         card:cardBackgroundColor="@color/cardview_dark_background"
         card:cardCornerRadius="0dp">
     <LinearLayout
+        android:id="@+id/tip_area"
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:orientation="vertical"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tip_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -30,6 +32,7 @@
             android:text="如果你的照片不够好,那是因为你靠得不够近。"/>
 
         <TextView
+            android:id="@+id/tip_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dip"
