--- a/app/src/main/res/layout/fragment_main_one.xml
+++ b/app/src/main/res/layout/fragment_main_one.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/main_tip_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
@@ -30,6 +31,7 @@
             android:text="如果你的照片不够好,那是因为你靠得不够近。"/>
 
         <TextView
+            android:id="@+id/main_tip_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dip"
